fix overflow carrusel mobile

--- a/style.css
+++ b/style.css
@@ -793,6 +793,7 @@ body.intro-active #navbar { opacity: 0; }
         grid-template-rows: auto auto;
         height: auto;
         min-height: 100vh;
+        overflow: hidden;
     }
 
     .hero-content {
@@ -812,6 +813,7 @@ body.intro-active #navbar { opacity: 0; }
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
     }
 
     .hero-text { max-width: 100%; font-size: 15px; }
